[tool.poetry]
name = "openai-article-generator"
version = "0.1.0"
description = ""
authors = ["Mark Wayne Buncaras Menorca <marcuwynu23@gmail.com>"]
readme = "README.md"
packages = [{include = "openai_article_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
